--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,23 @@ html,
 body {
   @apply bg-background text-foreground font-titillium-web;
 }
+
+.loader {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
+  background: #FFF;
+  box-sizing: border-box;
+  animation: zeroRotation 500ms ease infinite alternate-reverse;
+}
+
+@keyframes zeroRotation {
+  0% {
+    transform: scale(1) rotate(0deg);
+  }
+
+  100% {
+    transform: scale(0) rotate(360deg);
+  }
+}
