--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap');
-
 @import "tailwindcss";
 
 @theme {
@@ -21,15 +19,15 @@ body {
   position: relative;
   background: #FFF;
   box-sizing: border-box;
-  animation: zeroRotation 500ms ease infinite alternate-reverse;
+  animation: zeroRotation 1s ease infinite alternate-reverse;
 }
 
 @keyframes zeroRotation {
   0% {
-    transform: scale(1) rotate(0deg);
+    transform: scale(2.5) rotate(0deg);
   }
 
   100% {
-    transform: scale(0) rotate(360deg);
+    transform: scale(0.25) rotate(360deg);
   }
 }
